--- a/index.html
+++ b/index.html
@@ -7,19 +7,15 @@
 <script>
 var l = new canvas_turtle("logo_div", {
     //width of chart
-    width: 800,
+    width: 320,
     //height of chart
-    height: 600,
+    height: 450,
     //on error callback if canvas is unsupported
     on_error: null,
     //graphic for turtle (for debugging)
     turtle: "./turtle.png"
 });
-for(var i = 0; i < 4; i++)
-{
-    l.draw(100);
-    l.right(90);
-}
+main.js
 </script>
 </body>
 </html>
