--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ var l = new canvas_turtle("logo_div", {
     //graphic for turtle (for debugging)
     turtle: "./turtle.png"
 });
-main.js
+code.js
 </script>
 </body>
 </html>
